Update title and improve HTML structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Friendship Jukebox</title>
+    <title>The CCZ Friendship Jukebox</title>
     <style>
         body {
             background-color: #1a1a1a;
@@ -236,4 +236,5 @@
 
     </script>
 </body>
+
 </html>
