Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 </head>
 <body>
 
-    <h1>The Friendship Jukebox</h1>
+    <h1>The CCZ Friendship Jukebox</h1>
 
     <div class="grid" id="grid">
         </div>
@@ -238,3 +238,4 @@
 </body>
 
 </html>
+
