--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
             { id: 19, name: "Sobhit S", song: "Roi Roi Binale", artist: "Zubeen Garg" },
             { id: 20, name: "Utpal D", song: "Maya", artist: "Zubeen Garg" },
             { id: 21, name: "Abhijit B", song: "Tumi Suwa Jetiya", artist: "Zubeen Garg" },
-            { id: 22, name: "Sukanya D", song: "Anamika", artist: "Zubeen Garg" }
+            { id: 22, name: "Sukanya D", song: "Anamika", artist: "Zubeen Garg" },
+            { id: 23, name: "Bipul S", song: "EK Chatur Naar", artist: "Kishore Kumar" }
         ];
 
         const grid = document.getElementById('grid');
@@ -238,4 +239,5 @@
 </body>
 
 </html>
+
 
