--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
             { id: 20, name: "Utpal D", song: "Maya", artist: "Zubeen Garg" },
             { id: 21, name: "Abhijit B", song: "Tumi Suwa Jetiya", artist: "Zubeen Garg" },
             { id: 22, name: "Sukanya D", song: "Anamika", artist: "Zubeen Garg" },
-            { id: 23, name: "Bipul S", song: "EK Chatur Naar", artist: "Kishore Kumar" }
+            { id: 23, name: "Bipul S", song: "EK Chatur Naar", artist: "Kishore Kumar" },
+            { id: 24, name: "Debojit H", song: "O Sanam", artist: "Lucky Ali" }
         ];
 
         const grid = document.getElementById('grid');
@@ -239,5 +240,6 @@
 </body>
 
 </html>
+
 
 
