Added Mamu second song, Monmoyuri song

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             { id: 3, name: "Nabanita D", song: "Tomar Morome Mor", artist: "Jayanta Hazarika" },
             { id: 4, name: "Mrigaxee B", song: "7 (Addicted)", artist: "Enrique" },
             { id: 5, name: "Bhumika D", song: "Hero", artist: "Enrique" },
-            { id: 6, name: "Bitopi T", song: "Bailamos", artist: "Enrique" },
+            { id: 6, name: "Mrigaxee B", song: "Hero (Acoustic Cover)", artist: "Rintu Boro" },
             { id: 7, name: "Nikunj D", song: "Tum To Thehre Pardesi", artist: "Altaf Raja" },
             { id: 8, name: "Rintu B", song: "Sifar", artist: "Lucky Ali" },
             { id: 9, name: "Mriganka P", song: "Tumi Mur Mathu Mur", artist: "Zubeen Garg" },
@@ -174,7 +174,9 @@
             { id: 21, name: "Abhijit B", song: "Tumi Suwa Jetiya", artist: "Zubeen Garg" },
             { id: 22, name: "Sukanya D", song: "Anamika", artist: "Zubeen Garg" },
             { id: 23, name: "Bipul S", song: "EK Chatur Naar", artist: "Kishore Kumar" },
-            { id: 24, name: "Debojit H", song: "O Sanam", artist: "Lucky Ali" }
+            { id: 24, name: "Debojit H", song: "O Sanam", artist: "Lucky Ali" },
+            { id: 25, name: "Bitopi T", song: "Bailamos", artist: "Enrique" },
+            { id: 26, name: "Manmoyuri D", song: "Mur Minoti", artist: "Jayanta Hazarika" }
         ];
 
         const grid = document.getElementById('grid');
@@ -240,6 +242,7 @@
 </body>
 
 </html>
+
 
 
 
