--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     <div id="controls">
         <button id="playAllBtn" aria-playing="false">Play All</button>
-        <span style="color:#bbb; font-size:0.9em;">Single-click toggles play/pause • Double-click restarts</span>
+        <span style="color:#bbb; font-size:0.9em;">Single-click toggles play/pause. Double-click restarts</span>
     </div>
 
     <div class="grid" id="grid"></div>
@@ -228,7 +228,8 @@
             { id: 24, name: "Debojit H", song: "O Sanam", artist: "Lucky Ali" },
             { id: 25, name: "Bitopi T", song: "Bailamos", artist: "Enrique" },
             { id: 26, name: "Manmoyuri D", song: "Mur Minoti", artist: "Jayanta Hazarika" },
-            { id: 27, name: "Lima B", song: "Someday", artist: "MLTR" }
+            { id: 27, name: "Lima B", song: "Someday", artist: "MLTR" },
+            { id: 28, name: "Arunima D", song: "Tum Bin Jiya Jaye", artist: "K S Chithra"}
         ];
 
         const grid = document.getElementById('grid');
@@ -543,4 +544,5 @@
     </script>
 </body>
 </html>
+
 
