--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     <div id="controls">
         <button id="playAllBtn" aria-playing="false">Play All</button>
-        <span style="color:#bbb; font-size:0.9em;">Single-click toggles play/pause. Double-click restarts</span>
+        <span style="color:#bbb; font-size:0.9em;">Single-click toggles play/pause. Double-click restarts.</span>
     </div>
 
     <div class="grid" id="grid"></div>
@@ -544,6 +544,7 @@
     </script>
 </body>
 </html>
+
 
 
 
