Change Nomi's song to Cars soundtrack

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             { id: 11, name: "Sangeeta D", song: "Paakhi", artist: "Zubeen Garg" },
             { id: 12, name: "Maitreyee C", song: "Kishore Compilation", artist: "Kishore Kumar" },
             { id: 13, name: "Chayanika B", song: "Saher", artist: "Jagjit Singh" },
-            { id: 14, name: "Nomi S", song: "Dwipen Compilation", artist: "Dwipen Barua" },
+            { id: 14, name: "Nomi S", song: "Life is a Highway (Cars soundtrack)", artist: "Rascal Flatts" },
             { id: 15, name: "Gitartha B", song: "Supernatural", artist: "Santana" },
             { id: 16, name: "Mrinal T", song: "Xilpi", artist: "Mrinal Taye" },
             { id: 17, name: "Rinijini C", song: "Anamika", artist: "Zubeen Garg" },
@@ -539,6 +539,7 @@
         </script>
 </body>
 </html>
+
 
 
 
