Hide Play All Button

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <h1>The CCZ Friendship Jukebox</h1>
 
     <div id="controls">
-        <button id="playAllBtn" aria-playing="false">Play All</button>
+        <button id="playAllBtn" aria-playing="false" hidden>Play All</button>
         <span style="color:#bbb; font-size:0.9em;">Single-click toggles play/pause. Double-click restarts.</span>
     </div>
 
@@ -542,6 +542,7 @@
         </script>
 </body>
 </html>
+
 
 
 
