--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
     <div id="controls">
         <button id="playAllBtn" aria-playing="false" hidden>Play All</button>
-        <span style="color:#bbb; font-size:0.9em;">Single-click toggles play/pause. Double-click restarts.</span>
+        <span style="color:#bbb; font-size:0.9em;">Single-click toggles play/pause. Double-click restarts. Right click to 'Skip'.</span>
     </div>
 
     <div class="grid" id="grid"></div>
@@ -542,6 +542,7 @@
         </script>
 </body>
 </html>
+
 
 
 
