Added Lobo for Neeta

--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
             { id: 26, name: "Manmoyuri D", song: "Mur Minoti", artist: "Jayanta Hazarika" },
             { id: 27, name: "Nikunj D", song: "Tum To Thehre Pardesi", artist: "Altaf Raja" },
             { id: 28, name: "Arunima D", song: "Tum Bin Jiya Jaye", artist: "K S Chithra" },
-            { id: 29, name: "Fatima D Saikia", song: "Right Here Waiting", artist: "Richard Marx" }
+            { id: 29, name: "Fatima D Saikia", song: "Right Here Waiting", artist: "Richard Marx" },
+            { id: 30, name: "Nabanita D", song: "I'd love you to want me", artist: "Lobo" }
           ];
         
           const grid = document.getElementById('grid');
@@ -543,6 +544,7 @@
         </script>
 </body>
 </html>
+
 
 
 
