Added Parvezas song
Zindagi Kaisi Hain Paheli

--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
             { id: 27, name: "Nikunj D", song: "Tum To Thehre Pardesi", artist: "Altaf Raja" },
             { id: 28, name: "Arunima D", song: "Tum Bin Jiya Jaye", artist: "K S Chithra" },
             { id: 29, name: "Fatima S", song: "Right Here Waiting", artist: "Richard Marx" },
-            { id: 30, name: "Nabanita D", song: "I'd love you to want me", artist: "Lobo" }
+            { id: 30, name: "Nabanita D", song: "I'd love you to want me", artist: "Lobo" },
+            { id: 31, name: "Parveza", song: "Zindagi Kaisi Hain Paheli", artist: "Manna Dey" }  
           ];
         
           const grid = document.getElementById('grid');
@@ -544,6 +545,7 @@
         </script>
 </body>
 </html>
+
 
 
 
